--- a/src/__tests__/manual/websocket/config/serverless.main.yml
+++ b/src/__tests__/manual/websocket/config/serverless.main.yml
@@ -27,7 +27,8 @@ provider:
         - dynamodb:PutItem
         - dynamodb:UpdateItem
         - dynamodb:DeleteItem
-      Resource: "arn:aws:dynamodb:us-east-1:*:*"
+      Resource: 
+        - 'Fn::ImportValue': DataTableForTesting
     - Effect: Allow
       Action:
         - "execute-api:ManageConnections"
@@ -100,20 +101,6 @@ functions:
     events:
       - websocket:
           route: deleteListener
-          
-resources:
-  Resources:
-    DataTable:
-      Type: "AWS::DynamoDB::Table"
-      Properties:
-        AttributeDefinitions:
-        - AttributeName: name
-          AttributeType: S
-        KeySchema:
-        - AttributeName: name
-          KeyType: HASH
-        BillingMode: PAY_PER_REQUEST
-        TableName: data
 
 plugins:
   - serverless-offline
