Fix plugin reply when handler doesn't answer

--- a/src/__tests__/manual/websocket/config/serverless.main.yml
+++ b/src/__tests__/manual/websocket/config/serverless.main.yml
@@ -66,6 +66,11 @@ functions:
     events:
       - websocket:
           route: makeError
+  doNotAnswerAsync:
+    handler: config/handler-main.doNotAnswerAsync
+    events:
+      - websocket:
+          route: doNotAnswerAsync
   replyViaCallback:
     handler: config/handler-main.replyViaCallback
     events:
