fully integrated base64 support

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "Bob Thomas (https://github.com/bob-thomas)",
     "Brandon Evans (https://github.com/BrandonE)",
     "Cameron Cooper (https://github.com/cameroncooper)",
+    "Chris Muto (https://github.com/cmuto09)",
     "Chris Trevino (https://github.com/darthtrevino)",
     "Chris Watson (https://github.com/c24w)",
     "Christoph Gysin (https://github.com/christophgysin)",
