Added more HEAD tests
tests:
'when handler returns on requesting HEAD on an existing HEAD path'
'when handler returns on requesting HEAD on an existing HEAD/GET path'
'when handler returns on requesting GET on an existing HEAD/GET path'
'when requesting GET on a HEAD path should return 403'

--- a/__tests__/integration/handler/serverless.yml
+++ b/__tests__/integration/handler/serverless.yml
@@ -148,4 +148,21 @@ functions:
           method: get
           path: bad-answer-in-callback-handler
     handler: handlerPayload.BadAnswerInCallbackHandler
+
+  HeadOnly:
+    events:
+      - http:
+          method: head
+          path: head-only-handler
+    handler: handlerPayload.OK
+
+  HeadAndGet:
+    events:
+      - http:
+          method: head
+          path: head-get-handler
+      - http:
+          method: get
+          path: head-get-handler
+    handler: handlerPayload.OK
     
