--- a/__tests__/integration/websocket/serverless.yml
+++ b/__tests__/integration/websocket/serverless.yml
@@ -40,72 +40,72 @@ provider:
 
 functions:
   connect:
-    handler: config/main-handler.connect
+    handler: main-handler.connect
     events:
       - websocket:
           route: $connect
   disconnect:
-    handler: config/main-handler.disconnect
+    handler: main-handler.disconnect
     events:
       - websocket:
           route: $disconnect
   default:
-    handler: config/main-handler.defaultHandler
+    handler: main-handler.defaultHandler
     events:
       - websocket:
           route: $default
   getClientInfo:
-    handler: config/main-handler.getClientInfo
+    handler: main-handler.getClientInfo
     events:
       - websocket:
           route: getClientInfo
   getCallInfo:
-    handler: config/main-handler.getCallInfo
+    handler: main-handler.getCallInfo
     events:
       - websocket:
           route: getCallInfo
   makeError:
-    handler: config/main-handler.makeError
+    handler: main-handler.makeError
     events:
       - websocket:
           route: makeError
   doNotAnswerAsync:
-    handler: config/main-handler.doNotAnswerAsync
+    handler: main-handler.doNotAnswerAsync
     events:
       - websocket:
           route: doNotAnswerAsync
   replyViaCallback:
-    handler: config/main-handler.replyViaCallback
+    handler: main-handler.replyViaCallback
     events:
       - websocket:
           route: replyViaCallback
   replyErrorViaCallback:
-    handler: config/main-handler.replyErrorViaCallback
+    handler: main-handler.replyErrorViaCallback
     events:
       - websocket:
           route: replyErrorViaCallback
   multiCall1:
-    handler: config/main-handler.multiCall1
+    handler: main-handler.multiCall1
     events:
       - websocket:
           route: makeMultiCalls 
   multiCall2:
-    handler: config/main-handler.multiCall2
+    handler: main-handler.multiCall2
     events:
       - websocket:
           route: makeMultiCalls      
   send:
-    handler: config/main-handler.send
+    handler: main-handler.send
     events:
       - websocket:
           route: send
   registerListener:
-    handler: config/main-handler.registerListener
+    handler: main-handler.registerListener
     events:
       - websocket:
           route: registerListener
   deleteListener:
-    handler: config/main-handler.deleteListener
+    handler: main-handler.deleteListener
     events:
       - websocket:
           route: deleteListener
