--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
+    "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "prettier": "^1.18.2",
     "rollup": "^1.21.3",
