--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "@babel/register": "^7.6.0",
     "aws-sdk": "^2.528.0",
+    "awscred": "^1.4.2",
     "babel-eslint": "^10.0.3",
     "data-store": "^4.0.3",
     "eslint": "^6.4.0",
