--- a/__tests__/integration/websocket/main/serverless.yml
+++ b/__tests__/integration/websocket/main/serverless.yml
@@ -37,6 +37,11 @@ provider:
         - "execute-api:ManageConnections"
       Resource:
         - "arn:aws:execute-api:*:*:**/@connections/*"
+    - Effect: Allow
+      Action:
+        - lambda:UpdateFunctionConfiguration
+      Resource: "arn:aws:lambda:*:*:*:*"
+
 
 functions:
   connect:
