--- a/package.json
+++ b/package.json
@@ -133,7 +133,8 @@
     "Trevor Leach (https://github.com/trevor-leach)",
     "Tuan Minh Huynh (https://github.com/tuanmh)",
     "Utku Turunc (https://github.com/utkuturunc)",
-    "Vasiliy Solovey (https://github.com/miltador)"
+    "Vasiliy Solovey (https://github.com/miltador)",
+    "Uldis Sturms (https://github.com/uldissturms)"
   ],
   "engines": {
     "node": ">=8.10.0"
