Returning correct payload to http client (used postman)

--- a/src/lambda/handler-runner/dotnetcore-runner/executors-src/dotnetcore3.1/dotnetcore3.1.csproj
+++ b/src/lambda/handler-runner/dotnetcore-runner/executors-src/dotnetcore3.1/dotnetcore3.1.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>dotnetcore3._1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
