--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,11 @@ node_js:
   - 12
   - 13
 
-dotnet: 3.1.102
+addons:
+  snaps:
+    - name: dotnet-sdk
+      confinement: classic
+      channel: 3.1/stable
 
 script:
   - npm run lint
