--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "dist/main.js",
   "type": "commonjs",
   "scripts": {
-    "build": "rimraf dist && babel src --ignore \"**/__tests__/**/*\" --out-dir dist && copyfiles -u 1 \"src/**/*.{vm,py,rb,dll,json}\" dist",
+    "build": "npm run build-dotnet && rimraf dist && babel src --ignore \"**/__tests__/**/*\" --out-dir dist && copyfiles -u 1 \"src/**/*.{vm,py,rb,dll,json}\" dist",
+    "build-dotnet": "./src/lambda/handler-runner/dotnetcore-runner/executors-src/build.sh && ./tests/integration/dotnetcore/dotnetcore3.1/build.sh",
     "lint": "eslint .",
     "list-contributors": "echo 'clone https://github.com/mgechev/github-contributors-list.git first, then run npm install' && cd ../github-contributors-list && node bin/githubcontrib --owner dherault --repo serverless-offline --sortBy contributions --showlogin true --sortOrder desc > contributors.md",
     "prepare": "npm run build",
