feat: replace npm usage with yarn

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,9 @@ npm-debug.log*
 # IntelliJ
 .idea
 
-# examples
+# lockfiles
 examples/**/package-lock.json
+tests/**/package-lock.json
+
+examples/**/yarn.lock
+tests/**/yarn.lock
