--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "build": "rimraf dist && babel src --ignore \"**/__tests__/**/*\" --out-dir dist && copyfiles -u 1 \"src/**/*.{vm,py,rb}\" dist",
     "lint": "eslint .",
     "format": "eslint . --fix",
-    "list-contributors": "echo 'clone https://github.com/mgechev/github-contributors-list.git first, then run npm install' && cd ../github-contributors-list && node bin/githubcontrib --owner dherault --repo serverless-offline --sortBy contributions --showlogin true --sortOrder desc > contributors.md",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm run lint && npm run build",
-    "test": "npm run build && jest --verbose --silent --runInBand",
+    "list-contributors": "echo 'clone https://github.com/mgechev/github-contributors-list.git first, then run yarn install' && cd ../github-contributors-list && node bin/githubcontrib --owner dherault --repo serverless-offline --sortBy contributions --showlogin true --sortOrder desc > contributors.md",
+    "prepare": "yarn run build",
+    "prepublishOnly": "yarn run lint && yarn run build",
+    "test": "yarn run build && jest --verbose --silent --runInBand",
     "test:unit": "jest --verbose --silent --runInBand --config jest.config.units.js",
-    "test:cov": "npm run build && jest --coverage --silent --runInBand --collectCoverageFrom=src/**/*.js",
-    "test:log": "npm run build && jest --verbose",
+    "test:cov": "yarn run build && jest --coverage --silent --runInBand --collectCoverageFrom=src/**/*.js",
+    "test:log": "yarn run build && jest --verbose",
     "test:noBuild": "jest --verbose --runInBand --bail",
     "test:watch": "SKIP_SETUP=true jest --verbose --watch"
   },
