--- a/package.json
+++ b/package.json
@@ -148,7 +148,8 @@
     "Utku Turunc (https://github.com/utkuturunc)",
     "Vasiliy Solovey (https://github.com/miltador)",
     "Dima Krutolianov (https://github.com/dimadk24)",
-    "Bryan Vaz (https://github.com/bryanvaz)"
+    "Bryan Vaz (https://github.com/bryanvaz)",
+    "Luciano Jesus Lima (https://github.com/brazilianbytes)"
   ],
   "engines": {
     "node": ">=10.13.0"
