--- a/package.json
+++ b/package.json
@@ -148,7 +148,8 @@
     "Vasiliy Solovey (https://github.com/miltador)",
     "Dima Krutolianov (https://github.com/dimadk24)",
     "Bryan Vaz (https://github.com/bryanvaz)",
-    "Justin Ng (https://github.com/njyjn)"
+    "Justin Ng (https://github.com/njyjn)",
+    "Ahmed Bayoumy (https://github.com/bayoumymac)"
   ],
   "engines": {
     "node": ">=10.13.0"
