--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dedicatedTo": "Blue, a great migrating bird.",
   "name": "serverless-offline",
-  "version": "8.3.1",
+  "version": "8.4.0",
   "description": "Emulate AWS λ and API Gateway locally when developing your Serverless project",
   "license": "MIT",
   "main": "dist/main.js",
@@ -148,6 +148,7 @@
     "Stewart Gleadow (https://github.com/sgleadow)",
     "Thales Minussi (https://github.com/tminussi)",
     "Thang Minh Vu (https://github.com/ittus)",
+    "Tom St. Clair (https://github.com/tom-stclair)",
     "Trevor Leach (https://github.com/trevor-leach)",
     "Tuan Minh Huynh (https://github.com/tuanmh)",
     "Utku Turunc (https://github.com/utkuturunc)",
