Moved from plugin to custom variable
Updated the way custom authentication can be injected. Moved from a serverless plugin to a custom variable in the serverless.yml 'offline.customAuthenticationProvider'

--- a/tests/integration/custom-authentication/serverless.yml
+++ b/tests/integration/custom-authentication/serverless.yml
@@ -1,8 +1,11 @@
 service: integration-tests
 
+custom:
+  offline:
+    customAuthenticationProvider: '../../../tests/integration/custom-authentication/authenticationProvider.js'
+
 plugins:
   - ../../../
-  - ./customPlugin.js
 
 provider:
   memorySize: 128
