changed import process for custom authentication provider
moved from require() to createRequire() for custom authentication provider imports.  This provides a more intuitive root directory for relative imports from the custom variables.

--- a/tests/integration/custom-authentication/serverless.yml
+++ b/tests/integration/custom-authentication/serverless.yml
@@ -2,7 +2,7 @@ service: integration-tests
 
 custom:
   offline:
-    customAuthenticationProvider: '../../../tests/integration/custom-authentication/authenticationProvider.js'
+    customAuthenticationProvider: './authenticationProvider'
 
 plugins:
   - ../../../
