--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
     "@babel/plugin-proposal-dynamic-import": "^7.16.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@babel/plugin-proposal-private-methods": "^7.16.11",
     "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@babel/register": "^7.17.7",
     "archiver": "^5.3.0",
