test: refactor to use mocha

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prettier-check:updated": "pipe-git-updated --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier -c",
     "prettify": "prettier --write --ignore-path .gitignore \"**/*.{css,html,js,json,md,yaml,yml}\"",
     "prettify:updated": "pipe-git-updated --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier --write",
-    "test": "npm run build && jest --verbose --silent --runInBand",
+    "test": "TEST_BASE_URL=http://localhost:3000 mocha 'tests/**/*.test.js' --exclude '**/node_modules/**/*' --exclude '**/old-unit/**/*' --require @babel/register",
+    "test:jest": "npm run build && jest --verbose --silent --runInBand",
     "test:cov": "npm run build && jest --coverage --silent --runInBand --collectCoverageFrom=src/**/*.js",
     "test:log": "npm run build && jest --verbose",
     "test:noBuild": "jest --verbose --runInBand --bail",
@@ -230,8 +231,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "git-list-updated": "^1.2.1",
     "husky": "^8.0.1",
-    "jest": "^28.1.0",
     "lint-staged": "^12.4.1",
+    "mocha": "^10.0.0",
     "p-map": "^4.0.0",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
