resolved conflicts from upstream

--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
     "Bryan Vaz (https://github.com/bryanvaz)",
     "Justin Ng (https://github.com/njyjn)",
     "Fernando Alvarez (https://github.com/jefer590)",
-    "Grady Rogers (https://github.com/rogersgt)"
+    "Grady Rogers (https://github.com/rogersgt)",
     "Eric Carter (https://github.com/ericctsf)"
   ],
   "engines": {
