--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier-check:updated": "pipe-git-updated --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier -c",
     "prettify": "prettier --write --ignore-path .gitignore \"**/*.{css,html,js,json,md,yaml,yml}\"",
     "prettify:updated": "pipe-git-updated --ext=css --ext=html --ext=js --ext=json --ext=md --ext=yaml --ext=yml -- prettier --write",
-    "test": "TEST_BASE_URL=http://localhost:3000 mocha 'tests/**/*.test.js' --exclude '**/node_modules/**/*' --exclude '**/old-unit/**/*' --require @babel/register",
+    "test": "npm run build && TEST_BASE_URL=http://localhost:3000 mocha 'tests/**/*.test.js' --exclude '**/node_modules/**/*' --exclude '**/old-unit/**/*' --require @babel/register",
     "test:jest": "npm run build && jest --verbose --silent --runInBand",
     "test:cov": "npm run build && jest --coverage --silent --runInBand --collectCoverageFrom=src/**/*.js",
     "test:log": "npm run build && jest --verbose",
