--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -37,6 +37,8 @@ jobs:
         with:
           go-version: '1'
 
+      - uses: actions/setup-java@v3
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7'
@@ -74,6 +76,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1'
+
+      - uses: actions/setup-java@v3
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -113,6 +117,8 @@ jobs:
         with:
           go-version: '1'
 
+      - uses: actions/setup-java@v3
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7'
@@ -150,6 +156,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1'
+
+      - uses: actions/setup-java@v3
 
       - uses: ruby/setup-ruby@v1
         with:
