--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -49,6 +49,8 @@ jobs:
         with:
           go-version: '1'
 
+      - uses: actions/setup-java@v3
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7'
@@ -93,6 +95,8 @@ jobs:
         with:
           go-version: '1'
 
+      - uses: actions/setup-java@v3
+
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7'
@@ -132,6 +136,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1'
+
+      - uses: actions/setup-java@v3
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -174,6 +180,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '1'
+
+      - uses: actions/setup-java@v3
 
       - uses: ruby/setup-ruby@v1
         with:
