--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -38,6 +38,9 @@ jobs:
           go-version: '1'
 
       - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -78,6 +81,9 @@ jobs:
           go-version: '1'
 
       - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -118,6 +124,9 @@ jobs:
           go-version: '1'
 
       - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -158,6 +167,9 @@ jobs:
           go-version: '1'
 
       - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
 
       - uses: ruby/setup-ruby@v1
         with:
