--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -50,6 +50,9 @@ jobs:
           go-version: '1'
 
       - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -96,6 +99,9 @@ jobs:
           go-version: '1'
 
       - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -138,6 +144,9 @@ jobs:
           go-version: '1'
 
       - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -182,6 +191,9 @@ jobs:
           go-version: '1'
 
       - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
 
       - uses: ruby/setup-ruby@v1
         with:
