--- a/tests/scenario/aws-golang-simple-http-endpoint/serverless.yml
+++ b/tests/scenario/aws-golang-simple-http-endpoint/serverless.yml
@@ -2,19 +2,22 @@ service: aws-golang-simple-http-endpoint
 
 frameworkVersion: ">=2.0"
 
+plugins:
+  - ../../../
+
 provider:
   name: aws
   runtime: go1.x
 
 functions:
   hello:
-    handler: bin/hello
+    handler: hello/main.go
     events:
       - httpApi:
           path: /hello
           method: get
   world:
-    handler: bin/world
+    handler: world/main.go
     events:
       - httpApi:
           path: /world
