--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -95,7 +95,7 @@ jobs:
           npm update --no-save
           npm update --save-dev --no-save
       - name: Unit tests
-        run: script -e -c "npm test"
+        run: npm test
 
   windowsNode18:
     name: '[Windows] Node.js v18: Unit tests'
