--- a/tests/scenario/lambda-frameworks/sparticuz-chrome-aws-lambda/app/serverless.yml
+++ b/tests/scenario/lambda-frameworks/sparticuz-chrome-aws-lambda/app/serverless.yml
@@ -10,7 +10,10 @@ custom:
     noTimeout: true
 
 provider:
-  memorySize: 4096
+  apiGateway:
+    binaryMediaTypes:
+      - 'application/pdf'
+  memorySize: 2048
   name: aws
   region: us-east-1 # default
   runtime: nodejs14.x
@@ -21,6 +24,6 @@ functions:
   pdf:
     events:
       - http:
-          method: any
+          method: get
           path: pdf
     handler: src/index.default
