--- a/tests/integration/alb-handler/serverless.yml
+++ b/tests/integration/alb-handler/serverless.yml
@@ -1,14 +1,17 @@
 service: alb-handler-payload-tests
 
 configValidationMode: error
+deprecationNotificationMode: error
 
 plugins:
-  - ../../../
+  - ../../../src/index.js
 
 provider:
-  memorySize: 128
+  architecture: arm64
+  deploymentMethod: direct
+  memorySize: 1024
   name: aws
-  region: us-east-1 # default
+  region: us-east-1
   runtime: nodejs16.x
   stage: dev
   versionFunctions: false
