--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -46,9 +46,11 @@ jobs:
         with:
           ruby-version: '2.7'
 
-      # remove when node.js v14 support has ended
+      # install npm v8 on node.js v14 for package-lock v3 compatibility (npm v6 sems to have problems with it)
+      # use npm v8, issue with v9 on windows: https://github.com/actions/setup-node/issues/411#issuecomment-1025543081
+      # remove 'npm install' when node.js v14 support has ended
       - if: matrix.node-version == '14'
-        run: npm install -g npm@9
+        run: npm install -global npm@8
 
       - run: npm ci
 
