--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@hapi/h2o2": "^10.0.0",
     "@hapi/hapi": "^21.1.0",
     "@serverless/utils": "^6.8.2",
+    "array-unflat-js": "^0.1.0",
     "boxen": "^7.0.0",
     "chalk": "^5.2.0",
     "execa": "^6.1.0",
