--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "array-unflat-js": "^0.1.3",
     "boxen": "^7.0.1",
     "chalk": "^5.2.0",
+    "desm": "^1.3.0",
     "execa": "^6.1.0",
     "fs-extra": "^11.1.0",
     "is-wsl": "^2.2.0",
