--- a/examples/events/http/package.json
+++ b/examples/events/http/package.json
@@ -9,6 +9,6 @@
   "license": "MIT",
   "devDependencies": {
     "serverless": "^3.35.2",
-    "serverless-offline": "^13.0.0"
+    "serverless-offline": "13.1.1"
   }
 }
