--- a/examples/events/websocket/package.json
+++ b/examples/events/websocket/package.json
@@ -9,9 +9,9 @@
   "license": "MIT",
   "devDependencies": {
     "serverless": "^3.26.0",
-    "serverless-offline": "^12.0.3"
+    "serverless-offline": "^13.1.1"
   },
   "dependencies": {
-    "@aws-sdk/client-apigatewaymanagementapi": "3.241.0"
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.421.0"
   }
 }
