--- a/examples/lambda-invoke/lambda-invoke-aws-sdk-v2/package.json
+++ b/examples/lambda-invoke/lambda-invoke-aws-sdk-v2/package.json
@@ -8,10 +8,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "2.1462.0"
+    "aws-sdk": "^2.1467.0"
   },
   "devDependencies": {
     "serverless": "^3.35.2",
-    "serverless-offline": "^13.0.0"
+    "serverless-offline": "^13.1.1"
   }
 }
