--- a/examples/lambda-invoke/lambda-invoke-aws-sdk-v3/package.json
+++ b/examples/lambda-invoke/lambda-invoke-aws-sdk-v3/package.json
@@ -9,9 +9,9 @@
   "license": "MIT",
   "devDependencies": {
     "serverless": "^3.35.2",
-    "serverless-offline": "^13.0.0"
+    "serverless-offline": "^13.1.1"
   },
   "dependencies": {
-    "@aws-sdk/client-lambda": "3.414.0"
+    "@aws-sdk/client-lambda": "^3.421.0"
   }
 }
