--- a/examples/golang-lambda/package.json
+++ b/examples/golang-lambda/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "serverless": "^3.35.2",
-    "serverless-offline": "file:../../"
+    "serverless-offline": "^13.1.2"
   },
   "keywords": [],
   "author": "",
