--- a/examples/events/http/package.json
+++ b/examples/events/http/package.json
@@ -8,7 +8,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "serverless": "^3.35.2",
+    "serverless": "3.36.0",
     "serverless-offline": "13.2.0"
   }
 }
