--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test": "mocha --require ./tests/mochaHooks.cjs",
     "test:cov": "NODE_OPTIONS='--experimental-loader @istanbuljs/esm-loader-hook' nyc --reporter=html npm test",
     "test:node": "TEST=unit mocha --require ./tests/mochaHooks.cjs",
-    "test:unit": "TEST=unit mocha --require ./tests/mochaHooks.cjs"
+    "test:unit": "TEST=unit mocha --require ./tests/mochaHooks.cjs",
+    "test:e2e": "TEST=e2e mocha --require ./tests/mochaHooks.cjs"
   },
   "repository": {
     "type": "git",
