--- a/examples/tools/serverless-webpack/tsconfig.json
+++ b/examples/tools/serverless-webpack/tsconfig.json
@@ -4,6 +4,6 @@
     "module": "ES2020",
     "moduleResolution": "Node",
     "strict": true,
-    "target": "ES2020"
-  }
+    "target": "ES2020",
+  },
 }
