--- a/examples/events/http/package.json
+++ b/examples/events/http/package.json
@@ -9,6 +9,6 @@
   "license": "MIT",
   "devDependencies": {
     "serverless": "^3.38.0",
-    "serverless-offline": "^13.3.2"
+    "serverless-offline": "13.3.3"
   }
 }
