--- a/examples/tools/serverless-plugin-typescript/tsconfig.json
+++ b/examples/tools/serverless-plugin-typescript/tsconfig.json
@@ -3,6 +3,6 @@
     "module": "ES2020",
     "moduleResolution": "Node",
     "strict": true,
-    "target": "ES2020",
-  },
+    "target": "ES2020"
+  }
 }
