--- a/examples/tools/ts-node/tsconfig.json
+++ b/examples/tools/ts-node/tsconfig.json
@@ -4,6 +4,6 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "strict": true,
-    "target": "ES2020",
-  },
+    "target": "ES2020"
+  }
 }
