--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:cov": "NODE_OPTIONS='--experimental-loader @istanbuljs/esm-loader-hook' nyc --reporter=html npm test",
     "test:node": "TEST=node mocha --require ./tests/mochaHooks.cjs",
     "test:unit": "TEST=unit mocha --require ./tests/mochaHooks.cjs",
-    "test:e2e": "TEST=e2e mocha --require ./tests/mochaHooks.cjs"
+    "test:e2e": "TEST=e2e mocha --require ./tests/mochaHooks.cjs",
     "test:docker": "TEST=docker mocha --require ./tests/mochaHooks.cjs"
   },
   "repository": {
